--- a/style.css
+++ b/style.css
@@ -141,6 +141,7 @@
 .container{
     margin: 40px auto;
     width: 80%;
+    
 }
 
 .we__offer{
@@ -261,3 +262,344 @@
 .content h4{
     font-weight: 400;
 }
+
+.localities{
+    margin-top: 60px;
+}
+
+.localities h2{
+    font-size: 30px;
+    font-weight: 400;
+}
+
+.localities__container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    row-gap: 5px;
+    column-gap: 20px;
+}
+
+.localities__places{
+    margin-top: 16px;
+    height: 70px;
+    width: 320px;
+    display: flex;
+    background-color: rgb(255, 255, 255);
+    border: 1px solid rgb(232, 232, 232);
+    border-radius: 10px;
+    padding: 10px;
+    cursor: pointer;
+    color: rgb(50, 50, 50);
+}
+
+.localities__places_content{
+    font-size: 15px;
+    padding: 5px 0 10px 5px;
+    width: 90%;
+}
+
+.localities__places_content h4{
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.localities__places_content p{
+    padding-bottom: 10px;
+    font-weight: 300;
+}
+
+.localities__places_arrow{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 200;
+}
+
+ .localities__places:hover{
+    box-shadow: 2px 2px 5px rgb(100, 100, 100);
+    /* border: 1px solid slategray;  */
+} 
+
+.get__the_app{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(255, 251,247);
+    width: 100%;
+    padding: 48px 48px;
+}
+
+.get__the_app .semicontainer{
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 24px;
+}
+
+.get__the_app .semicontainer .left{
+    flex: 2;
+}
+
+.get__the_app .semicontainer .left img{
+    width: 100%;
+    object-fit: cover;
+    object-position: center;    
+}
+
+.get__the_app .semicontainer .right{
+    flex: 3;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.semicontainer .right h1{
+    font-weight: 500;
+    font-size: 32px;
+}
+
+.semicontainer .right p{
+    font-size: 14px;
+}
+
+.right .radio__button_container{
+    display: flex;
+    align-items: center;
+    gap: 48px;
+}
+
+.right .radio__button_container div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.right .radio__button_container div input{
+    height: 15px;
+    width: 15px;
+    accent-color: rgb(239, 79, 95);
+}
+
+.semicontainer .right .input_container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+    
+}
+
+.input_container button,
+.input_container input{
+    padding: 10px 12px;
+    border-radius: 5px;
+    font-size: 16px;
+    font-weight: 200;
+}
+
+.input_container input{
+    outline: none;
+    border: 1px solid gray;
+    flex: auto;
+    color: rgb(28, 28, 28);
+}
+
+.input_container button{
+    border: none;
+    background-color: rgb(239, 79, 95);
+    color: white;
+    cursor: pointer;
+}
+
+.input_container button:hover{
+    background-color: crimson;
+}
+
+.right .download__app_container{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;    
+}
+
+.download__app_container h5{
+    font-weight: 400;
+    color: gray;
+}
+
+.download__app_container div{
+    display: flex;
+    gap: 16px;
+}
+
+.download__app_container div img{
+    width: 35%;
+}
+
+@media only screen and (max-width: 1300px) {
+    .get__the_app .semicontainer .left{
+        flex: 1;
+    }
+
+    .get__the_app .semicontainer .right{
+        flex: 1;
+    }
+
+    .get__the_app .semicontainer{
+        width: 80%;
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    .get__the_app{
+        padding: 32px;
+    }
+
+    .get__the_app .semicontainer{
+        width: 90%;
+    }
+}
+
+@media only screen and (max-width: 700px) {
+    .get__the_app{
+        padding: 64px 0;
+    }
+
+    .get__the_app .semicontainer{
+        width: 80%;
+        flex-direction: column;
+    }
+}
+
+.footer{
+    width: 100%;
+    background-color: rgb(250, 250, 250);
+}
+
+.footer_section1{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 90%;
+    margin: auto;
+}
+
+.footer_section1 img{
+    width: 120px;
+    height: auto;
+}
+
+.section1__buttonContainer{
+    display: flex;
+    gap: 8px;
+}
+
+.section1__buttonContainer button{
+    padding: 5px;
+    /* width: 100%; */
+    border: 1px solid gray;
+    background-color: transparent;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.navigation_container{
+    display: grid;
+    width: 90%;
+    margin: auto;
+    /* grid-template-columns: 1fr 1fr 1fr 1fr 1fr; */
+    grid-template-columns: repeat(5, 1fr); 
+    gap: 16px;
+    padding: 48px 0; 
+}
+
+.link__container{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.link__container h5{
+    font-weight: 500;
+    font-size: 14px;
+    margin-bottom: 5px;
+    letter-spacing: 1px;
+}
+
+.footer__link{
+    text-decoration: none;
+    color: gray;
+    font-size: 13px;
+    font-weight: 300;
+    letter-spacing: 0.5px;
+}
+
+.footer__link:hover{
+    color: black;
+}
+
+.social__links_container{
+    display: flex;
+    gap: 8px;
+}
+
+.social__links_container button{
+    background-color: black;
+    border: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.social__links_container i{
+    color: white;
+    font-size: 13px;
+}
+
+.footer__store_logos{
+    width: 70%;
+}
+
+.footer .disclamer{
+    width: 90%;
+    margin: auto;
+    padding: 20px 0;
+    font-size: 12px;
+    color: gray;
+    border-top: 1px solid gray;
+}
+
+@media only screen and (max-width: 900px) {
+    .navigation_container {
+      grid-template-columns: 1fr 1fr 1fr;
+    }
+  }
+  
+  @media only screen and (max-width: 600px) {
+    .navigation_container {
+      grid-template-columns: 1fr 1fr;
+    }
+  }
+  
+  @media only screen and (max-width: 450px) {
+    .footer_section1 {
+      flex-direction: column;
+      gap: 16px;
+      align-items: flex-start;
+    }
+  
+    .navigation_container {
+      grid-template-columns: 1fr;
+    }
+  }
+  
+  
+
+
+ 
